Configuração do plugin docker para Maven
(inicial)

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>timeApi</finalName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.2.3</version>
+				<configuration>
+					<imageName>${project.artifactId}</imageName>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
