Configuração do plugin para docker - final

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,13 +1,11 @@
 FROM java:8
 MAINTAINER Thiago Santos de Freitas <tsfreitas@gmail.com>
 
-RUN apt-get update
-
 ENV spring.profiles.active production
 
 EXPOSE 8080
 
-COPY target/timeApi.jar app.jar
+COPY timeApi.jar app.jar
 
 RUN bash -c 'touch /app.jar'
 
