Retrofit com xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 endpoint.timetable=http://api.timezonedb.com/
 timetable.key=NELQKJ8YF4YG
+
+info.app.name=@project.name@
+info.app.version=@project.version@
